--- a/.release_history.yml
+++ b/.release_history.yml
@@ -4,3 +4,5 @@ devops_assist:
   :timestamp: 1634915803.5179443
 - :version: 0.1.1
   :timestamp: 1635758995.8396068
+- :version: 0.1.2
+  :timestamp: 1635828371.7486541
