--- a/.release_history.yml
+++ b/.release_history.yml
@@ -6,3 +6,5 @@ devops_assist:
   :timestamp: 1635758995.8396068
 - :version: 0.1.2
   :timestamp: 1635828371.7486541
+- :version: 0.1.3
+  :timestamp: 1637159437.0931785
