Committing file changed during release version '0.1.4'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -8,3 +8,5 @@ devops_assist:
   :timestamp: 1635828371.7486541
 - :version: 0.1.3
   :timestamp: 1637159437.0931785
+- :version: 0.1.4
+  :timestamp: 1637846341.0877914
