Committing file changed during release version '0.2.0'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -10,3 +10,5 @@ devops_assist:
   :timestamp: 1637159437.0931785
 - :version: 0.1.4
   :timestamp: 1637846341.0877914
+- :version: 0.2.0
+  :timestamp: 1657610885.1882625
