--- a/.release_history.yml
+++ b/.release_history.yml
@@ -12,3 +12,5 @@ devops_assist:
   :timestamp: 1637846341.0877914
 - :version: 0.2.0
   :timestamp: 1657610885.1882625
+- :version: 0.2.1
+  :timestamp: 1660213921.2263613
