--- a/.release_history.yml
+++ b/.release_history.yml
@@ -14,3 +14,5 @@ devops_assist:
   :timestamp: 1657610885.1882625
 - :version: 0.2.1
   :timestamp: 1660213921.2263613
+- :version: 0.3.0
+  :timestamp: 1661973921.357578
