--- a/.release_history.yml
+++ b/.release_history.yml
@@ -16,3 +16,5 @@ devops_assist:
   :timestamp: 1660213921.2263613
 - :version: 0.3.0
   :timestamp: 1661973921.357578
+- :version: 0.3.1
+  :timestamp: 1664976434.566908
