Committing file changed during release version '0.3.3'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -20,3 +20,5 @@ devops_assist:
   :timestamp: 1664976434.566908
 - :version: 0.3.2
   :timestamp: 1679541322.329349
+- :version: 0.3.3
+  :timestamp: 1679541597.651479
