Committing file changed during release version '0.3.2'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -18,3 +18,5 @@ devops_assist:
   :timestamp: 1661973921.357578
 - :version: 0.3.1
   :timestamp: 1664976434.566908
+- :version: 0.3.2
+  :timestamp: 1679806218.9064217
