Fix bug method visibility changed

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -20,3 +20,5 @@ devops_assist:
   :timestamp: 1664976434.566908
 - :version: 0.3.2
   :timestamp: 1679806218.9064217
+- :version: 0.3.4
+  :timestamp: 1679814741.9125335
