--- a/.release_history.yml
+++ b/.release_history.yml
@@ -22,3 +22,5 @@ devops_assist:
   :timestamp: 1679806218.9064217
 - :version: 0.3.4
   :timestamp: 1679814741.9125335
+- :version: 0.3.4
+  :timestamp: 1679814912.2051551
