Rearrange the version number list by putting current version at the near bottom; using latest version of git_cli_prompt that throws error into parent

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -24,3 +24,5 @@ devops_assist:
   :timestamp: 1679814741.9125335
 - :version: 0.3.4
   :timestamp: 1679814912.2051551
+- :version: 0.3.4
+  :timestamp: 1679814952.708086
