--- a/.release_history.yml
+++ b/.release_history.yml
@@ -26,3 +26,5 @@ devops_assist:
   :timestamp: 1679814912.2051551
 - :version: 0.3.4
   :timestamp: 1679814952.708086
+- :version: 0.3.5
+  :timestamp: 1679817289.8002794
