--- a/.release_history.yml
+++ b/.release_history.yml
@@ -28,3 +28,5 @@ devops_assist:
   :timestamp: 1679814952.708086
 - :version: 0.3.5
   :timestamp: 1679817289.8002794
+- :version: 0.3.6
+  :timestamp: 1679894660.0175862
