--- a/.release_history.yml
+++ b/.release_history.yml
@@ -30,3 +30,5 @@ devops_assist:
   :timestamp: 1679817289.8002794
 - :version: 0.3.6
   :timestamp: 1679894660.0175862
+- :version: 0.3.7
+  :timestamp: 1679896577.1906195
