Committing file changed during release version '0.3.9'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -32,3 +32,5 @@ devops_assist:
   :timestamp: 1679894660.0175862
 - :version: 0.3.7
   :timestamp: 1679896577.1906195
+- :version: 0.3.8
+  :timestamp: 1679896754.9692261
