Committing file changed during release version '0.3.10'

--- a/.release_history.yml
+++ b/.release_history.yml
@@ -34,3 +34,5 @@ devops_assist:
   :timestamp: 1679896577.1906195
 - :version: 0.3.8
   :timestamp: 1679896754.9692261
+- :version: 0.3.9
+  :timestamp: 1679897047.3892941
